--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     // "incremental": true,                   /* Enable incremental compilation */
     "target": "ESNext",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
     "module": "ESNext",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
-     "outDir": "./",                        /* Redirect output structure to the directory. */
+   //  "outDir": "./",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
